k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs-container
          #image: nodejs-express-rest:latest
          #imagePullPolicy: Never
          image: ghcr.io/letsdevapps/nodejs-express-rest:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
