k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
