k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
#  - host: node.local (
# sudo nano /etc/hosts
# <ingress-ip> node.local)
  - http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 3000
